# nes_emulator

./: CMakeLists.txt  gen_inst_block.py  main.c
include/: cartridge.h  emulator.h  instruction.h  log.h  mapper.h
include/core/: cpu.h  memory.h  ppu.h
lib/: cartridge.c  emulator.c  mapper.c
lib/core/: cpu.c  memory.c  ppu.c
lib/instructions/: arith.c  branch.c  ctrl.c  flags.c  illegal.c  inc.c  instruction.c  load.c  logic.c  nop.c  shift.c  stack.c  trans.c
lib/mappers/: 000.c
test/: adc.test.cpp  and.test.cpp  asl.test.cpp  test.common.cpp  test.common.hpp
